--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -77,6 +77,27 @@
 				<div class="btnBox"><a href="Shop.html">Shop all stores</a></div>
 			</div>
 		</div>
+		<div class="promotions">
+			<h1>Featured promotions</h1>
+			<div class="treeBannes">
+				<div class="col-3">
+					<img src="./images/edge-linen.png">
+				</div>
+				<div class="col-3">
+					<img src="./images/Pet-house-halloween.png">
+				</div>
+				<div class="col-3">
+					<img src="./images/Robins-halloween.png">
+				</div>
+			</div>
+		</div>
+		<div class="clear"></div>
+		<div class="takeControl">
+			<h1>Take control on how you pay</h1>
+			<p>
+				Lorem ipsum dolor sit amet, tation doctus eligendi sit ut. Ei ius iusto ignota essent, vix at gubergren mediocritatem, et est iriure definitionem. Te mazim quodsi voluptatum mei. Ex pri graecis nusquam principes. Ut sed porro integre, est et fierent definitionem.
+			</p>
+		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="scripts/Typer.js"></script>
