--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -50,6 +50,7 @@
 		</div>
 		<!--hamburger menu-->
 		<nav role="navigation">
+			<a class="mainLogo" href="/"></a>
 			<div id="hamburgerMenu">
 				<input type="checkbox" />
 				<span></span>
@@ -66,7 +67,6 @@
 				</ul>
 			</div>
 		</nav>
-
 		<div class="heroHomeContainer">
 			<div class="greyWithOpacity"></div>
 			<div class="heroInfo">
@@ -90,13 +90,34 @@
 					<img src="./images/Robins-halloween.png">
 				</div>
 			</div>
+			<div class="clear"></div>
 		</div>
-		<div class="clear"></div>
 		<div class="takeControl">
 			<h1>Take control on how you pay</h1>
 			<p>
 				Lorem ipsum dolor sit amet, tation doctus eligendi sit ut. Ei ius iusto ignota essent, vix at gubergren mediocritatem, et est iriure definitionem. Te mazim quodsi voluptatum mei. Ex pri graecis nusquam principes. Ut sed porro integre, est et fierent definitionem.
 			</p>
+		</div>
+		<div class="howItWorks">
+			<h1>How Openpay works</h1>
+			<div class="treeBannes">
+				<div class="col-3">
+					<img src="./images/card.png" class="icon">
+					<h2>Join the club</h2>
+					<p>Download the app, register for an account, and get instantly approved.</p>
+				</div>
+				<div class="col-3">
+					<img src="./images/basket.png" class="icon">
+					<h2>What you want</h2>
+					<p>Take more time to pay when you shop online or instore. Always interest free.</p>
+				</div>
+				<div class="col-3">
+					<img src="./images/touch.png" class="icon">
+					<h2>Click & Control</h2>
+					<p>Customize your payment plan to your schedule. All from your own pocket.</p>
+				</div>
+			</div>
+			<div class="clear"></div>
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
