--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -102,19 +102,25 @@
 			<h1>How Openpay works</h1>
 			<div class="treeBannes">
 				<div class="col-3">
-					<img src="./images/card.png" class="icon">
-					<h2>Join the club</h2>
-					<p>Download the app, register for an account, and get instantly approved.</p>
+					<div class="options">
+						<img src="./images/card.png" class="icon">
+						<h2>Join the club</h2>
+						<p>Download the app, register for an account, and get instantly approved.</p>
+					</div>
 				</div>
 				<div class="col-3">
-					<img src="./images/basket.png" class="icon">
-					<h2>What you want</h2>
-					<p>Take more time to pay when you shop online or instore. Always interest free.</p>
+					<div class="options">
+						<img src="./images/basket.png" class="icon">
+						<h2>What you want</h2>
+						<p>Take more time to pay when you shop online or instore. Always interest free.</p>
+					</div>
 				</div>
 				<div class="col-3">
-					<img src="./images/touch.png" class="icon">
-					<h2>Click & Control</h2>
-					<p>Customize your payment plan to your schedule. All from your own pocket.</p>
+					<div class="options">
+						<img src="./images/touch.png" class="icon">
+						<h2>Click & Control</h2>
+						<p>Customize your payment plan to your schedule. All from your own pocket.</p>
+					</div>
 				</div>
 			</div>
 			<div class="clear"></div>
