--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -124,6 +124,12 @@
 				</div>
 			</div>
 			<div class="clear"></div>
+			<div class="learnMoreWrapper">
+				<a class="button" href="#">Learn more</a>
+			</div>
+		</div>
+		<div class="whereCanShop">
+			<h1>So where can I shop?</h1>
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
