--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -95,7 +95,9 @@
 		<div class="takeControl">
 			<h1>Take control on how you pay</h1>
 			<p>
-				Lorem ipsum dolor sit amet, tation doctus eligendi sit ut. Ei ius iusto ignota essent, vix at gubergren mediocritatem, et est iriure definitionem. Te mazim quodsi voluptatum mei. Ex pri graecis nusquam principes. Ut sed porro integre, est et fierent definitionem.
+				Whether you're shopping for clothes, servicing your car or taking care of your health, have it today with more time to pay.
+<br>
+				Interest-free, flexible payment plans for everything you want, need and love. Because why pay today when you could pay smarter?
 			</p>
 		</div>
 		<div class="howItWorks">
