--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -79,7 +79,7 @@
 		</div>
 		<div class="promotions">
 			<h1>Featured promotions</h1>
-			<div class="treeBannes">
+			<div class="treeBanners">
 				<div class="col-3">
 					<img src="./images/edge-linen.png">
 				</div>
@@ -96,13 +96,13 @@
 			<h1>Take control on how you pay</h1>
 			<p>
 				Whether you're shopping for clothes, servicing your car or taking care of your health, have it today with more time to pay.
-<br>
+                <br>
 				Interest-free, flexible payment plans for everything you want, need and love. Because why pay today when you could pay smarter?
 			</p>
 		</div>
 		<div class="howItWorks">
 			<h1>How Openpay works</h1>
-			<div class="treeBannes">
+			<div class="treeBanners">
 				<div class="col-3">
 					<div class="options">
 						<img src="./images/card.png" class="icon">
@@ -132,9 +132,116 @@
 		</div>
 		<div class="whereCanShop">
 			<h1>So where can I shop?</h1>
+			<div class="fourBanners">
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide">
+						<h3>Marketing to provide</h3>
+					</div>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</div>
+		<div class="downloadApp">
+			<h1>Download the Openpay app</h1>
+			<p>
+				Browse for shops and services, manage your payment schedule and
+				get exclusive offers from your favorite brands.
+			</p>
+			<div class="downloadAppWrapper">
+				<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
+					<img class="apple" src="./images/apple.svg">
+				</a>
+				<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay">
+					<img class="android" src="./images/android.svg">
+				</a>
+			</div>
+		</div>
+		<div class="instagram">
+			<h1>Join us on Instegram</h1>
+			<div class="instagramWrapper">
+				<div id="instagram"></div>
+			</div>
+		</div>
+		<div class="footer">
+			<div class="footerMenu">
+				<a href="help.html" class="footerNav">Help & Contact</a>
+				<a href="merchants.html" class="footerNav">For Merchants</a>
+				<a href="careers.html" class="footerNav">Careers</a>
+				<a href="blog.html" class="footerNav">Blog</a>
+			</div>
+			<div class="socialLinks">
+				<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
+					Facebook
+				</a>
+				<a href="https://twitter.com/openpay_" class="footer-icon twit">
+					Twitter
+				</a>
+				<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+					LinkedIn
+				</a>
+				<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+					Instagram
+				</a>
+			</div>
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="scripts/Typer.js"></script>
+	<script src="scripts/instegram.js"></script>
 </body>
 </html>
