--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -225,19 +225,42 @@
 				<a href="blog.html" class="footerNav">Blog</a>
 			</div>
 			<div class="socialLinks">
-				<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
-					Facebook
+				<span>
+					<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
+						Facebook
+					</a>
+					<a href="https://twitter.com/openpay_" class="footer-icon twit">
+						Twitter
+					</a>
+				</span>
+				<span>
+					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+						LinkedIn
+					</a>
+					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+						Instagram
+					</a>
+				</span>
+			</div>
+			<div class="footerAppWrapper">
+				<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
+					<img class="apple" src="./images/apple.svg">
 				</a>
-				<a href="https://twitter.com/openpay_" class="footer-icon twit">
-					Twitter
-				</a>
-				<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
-					LinkedIn
-				</a>
-				<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
-					Instagram
+				<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay">
+					<img class="android" src="./images/android.svg">
 				</a>
 			</div>
+			<div class="footerMoreLinksMenu">
+				<a href="privacy.html" class="footerNav">Privacy</a>
+				<a href="terms.html" class="footerNav">Terms & Conditions</a>
+				<a href="userLicence.html" class="footerNav">User Licence</a>
+				<a href="PCI.html" class="footerNav">PCI Data Security</a>
+			</div>
+			<p>© Openpay &nbsp; | &nbsp; Made with <3 in Melbourne, Australia</p>
+			<a class="whiteLogo" href="/">
+				<img src="./images/openpay_logo_white.svg">
+			</a>
+
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
