--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -39,7 +39,7 @@
 <body>
     <div class="mainContent">
 		<div class="topNav">
-			<a class="mainLogo" href="/"></a>
+			<a class="mainLogo" href="index.html"></a>
 			<a href="shop.html">Shop now</a>
 			<a href="how.html">How it works</a>
 			<a href="business.html">I'm a business</a>
@@ -50,7 +50,7 @@
 		</div>
 		<!--hamburger menu-->
 		<nav role="navigation">
-			<a class="mainLogo" href="/"></a>
+			<a class="mainLogo" href="index.html"></a>
 			<div id="hamburgerMenu">
 				<input type="checkbox" />
 				<span></span>
