--- a/newDesign/shop.html
+++ b/newDesign/shop.html
@@ -34,39 +34,254 @@
 </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
     <link rel="stylesheet" href="./css/shop.css" />
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
+    <div class="topNav">
+        <a class="mainLogo" href="index.html"></a>
+        <a class="active" href="shop.html">Shop now</a>
+        <a href="how.html">How it works</a>
+        <a href="business.html">I'm a business</a>
+        <a href="help.html">Help & contact</a>
+        <div class="topNavRight">
+            <a href="#">Merchant log in</a>
+        </div>
+    </div>
+    <!--hamburger menu-->
+    <nav role="navigation">
+        <a class="mainLogo" href="index.html"></a>
+        <div id="hamburgerMenu">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul>
+                <a class="active" href="shop.html"><li>Shop now</li></a>
+                <a href="how.html"><li>How it works</li></a>
+                <a href="business.html"><li>I'm a business</li></a>
+                <a href="help.html"><li>Help & contact</li></a>
+                <br>
+                <a href="#"><li>Merchant log in</li></a>
+
+            </ul>
+        </div>
+    </nav>
     <div class="mainContent">
-        <div class="topNav">
-            <a class="mainLogo" href="/"></a>
-            <a href="shop.html">Shop now</a>
-            <a href="how.html">How it works</a>
-            <a href="business.html">I'm a business</a>
-            <a href="help.html">Help & contact</a>
-            <div class="topNavRight">
-                <a href="#">Merchant log in</a>
+        <div class="topSearch">
+            <div class="searchBar">
+                <input type="text" name="search" placeholder="What are you searching for?">
+                <input type="submit" value="Search">
+            </div>
+            <div class="moreFilters">
+                <select class="city">
+                    <option value="0">Melbourne</option>
+                    <option value="1">Sydney</option>
+                    <option value="2">Orange</option>
+                    <option value="3">Albury</option>
+                    <option value="4">Bathurst</option>
+                </select>
+                <select class="category">
+                    <option value="0">Select Category</option>
+                    <option value="1">Health &amp; Wellbeing</option>
+                    <option value="2">Fashion</option>
+                    <option value="3">Lifestyle</option>
+                    <option value="4">Beauty</option>
+                    <option value="5">Trades &amp; Services</option>
+                    <option value="6">Automotive</option>
+                    <option value="7">Dental</option>
+                    <option value="8">Sports &amp; Outdoors</option>
+                    <option value="9">Home &amp; Garden</option>
+                </select>
+                <label><input type="checkbox" name="Online" value="value">Online</label>
+                <label><input type="checkbox" name="InStore" value="value">In-store</label>
             </div>
         </div>
-        <!--hamburger menu-->
-        <nav role="navigation">
-            <div id="hamburgerMenu">
-                <input type="checkbox" />
-                <span></span>
-                <span></span>
-                <span></span>
-                <ul>
-                    <a href="shop.html">Shop now</a>
-                    <a href="how.html">How it works</a>
-                    <a href="business.html">I'm a business</a>
-                    <a href="help.html">Help & contact</a>
-                    <br>
-                    <a href="#"><li>Merchant log in</li></a>
-
-                </ul>
+        <div class="promotions">
+            <h1>Current promotions</h1>
+            <div class="treeBanners">
+                <div class="col-3">
+                    <img src="./images/edge-linen.png">
+                </div>
+                <div class="col-3">
+                    <img src="./images/Pet-house-halloween.png">
+                </div>
+                <div class="col-3">
+                    <img src="./images/Robins-halloween.png">
+                </div>
             </div>
-        </nav>
-
+            <div class="clear"></div>
+        </div>
+        <div class="clear"></div>
+        <div class="byCategory">
+            <h1>So where can I shop?</h1>
+            <div class="fourBanners">
+                <div class="col-4">
+                    <div class="marketToProvide">
+                        <h3>Health & wellbeing</h3>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="marketToProvide">
+                        <h3>Fashion</h3>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="marketToProvide">
+                        <h3>Lifestyle</h3>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="marketToProvide">
+                        <h3>Beauty</h3>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="marketToProvide">
+                        <h3>Trades & services</h3>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="marketToProvide">
+                        <h3>Automotive</h3>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="marketToProvide">
+                        <h3>Home & garden</h3>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="marketToProvide">
+                        <h3>Beauty</h3>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="marketToProvide">
+                        <h3>Trades & services</h3>
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+        <div class="promotions brands">
+            <h1>Featured Brands</h1>
+            <div class="treeBanners">
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ultratune_logo.png">
+                </div>
+                <div class="col-4">
+                    <img src="./images/brands/ShopifyPLus.png">
+                </div>
+            </div>
+            <div class="clear"></div>
+        </div>
     </div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
