--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -1,72 +1,287 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/png" href="./assets/images/icon.png"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Openpay - Shop</title>
-	    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	  gtag('config', 'UA-84225706-1');
-	</script>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/png" href="./assets/images/icon.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Openpay - Shop</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-84225706-1');
+    </script>
 
-	<!-- 	FullStory Snippet -->
-	<script>
-	window['_fs_debug'] = false;
-	window['_fs_host'] = 'fullstory.com';
-	window['_fs_org'] = 'D6N17';
-	window['_fs_namespace'] = 'FS';
-	(function(m,n,e,t,l,o,g,y){
-	    if (e in m) {if(m.console && m.console.log) { m.console.log('FullStory namespace conflict. Please set window["_fs_namespace"].');} return;}
-	    g=m[e]=function(a,b){g.q?g.q.push([a,b]):g._api(a,b);};g.q=[];
-	    o=n.createElement(t);o.async=1;o.src='https://'+_fs_host+'/s/fs.js';
-	    y=n.getElementsByTagName(t)[0];y.parentNode.insertBefore(o,y);
-	    g.identify=function(i,v){g(l,{uid:i});if(v)g(l,v)};g.setUserVars=function(v){g(l,v)};
-	    g.shutdown=function(){g("rec",!1)};g.restart=function(){g("rec",!0)};
-	    g.consent=function(a){g("consent",!arguments.length||a)};
-	    g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
-	    g.clearUserCookie=function(){};
-	})(window,document,window['_fs_namespace'],'script','user');
-</script>
+    <!-- 	FullStory Snippet -->
+    <script>
+        window['_fs_debug'] = false;
+        window['_fs_host'] = 'fullstory.com';
+        window['_fs_org'] = 'D6N17';
+        window['_fs_namespace'] = 'FS';
+        (function(m,n,e,t,l,o,g,y){
+            if (e in m) {if(m.console && m.console.log) { m.console.log('FullStory namespace conflict. Please set window["_fs_namespace"].');} return;}
+            g=m[e]=function(a,b){g.q?g.q.push([a,b]):g._api(a,b);};g.q=[];
+            o=n.createElement(t);o.async=1;o.src='https://'+_fs_host+'/s/fs.js';
+            y=n.getElementsByTagName(t)[0];y.parentNode.insertBefore(o,y);
+            g.identify=function(i,v){g(l,{uid:i});if(v)g(l,v)};g.setUserVars=function(v){g(l,v)};
+            g.shutdown=function(){g("rec",!1)};g.restart=function(){g("rec",!0)};
+            g.consent=function(a){g("consent",!arguments.length||a)};
+            g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
+            g.clearUserCookie=function(){};
+        })(window,document,window['_fs_namespace'],'script','user');
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
     <link rel="stylesheet" href="./css/shop.css" />
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-    <div class="mainContent">
-        <div class="topNav">
-            <a class="mainLogo" href="#"></a>
-            <a class="active" href="#">Shop now</a>
-            <a href="#">How it works</a>
-            <a href="#">I'm a business</a>
-            <a href="#">Help & contact</a>
-            <div class="topNavRight">
-                <a href="#">Merchant log in</a>
+<div class="topNav">
+    <a class="mainLogo" href="index.html"></a>
+    <a href="shop.html">Shop now</a>
+    <a href="how.html">How it works</a>
+    <a class="active" href="business.html">I'm a business</a>
+    <a href="help.html">Help & contact</a>
+    <div class="topNavRight">
+        <a href="#">Merchant log in</a>
+    </div>
+</div>
+<!--hamburger menu-->
+<nav role="navigation">
+    <a class="mainLogo" href="index.html"></a>
+    <div id="hamburgerMenu">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+        <ul>
+            <a href="shop.html"><li>Shop now</li></a>
+            <a href="how.html"><li>How it works</li></a>
+            <a class="active" href="business.html"><li>I'm a business</li></a>
+            <a href="help.html"><li>Help & contact</li></a>
+            <br>
+            <a href="#"><li>Merchant log in</li></a>
+
+        </ul>
+    </div>
+</nav>
+<div class="mainContent">
+    <div class="topSearch">
+        <div class="searchBar">
+            <input type="text" name="search" placeholder="What are you searching for?">
+            <input type="submit" value="Search">
+        </div>
+        <div class="moreFilters">
+            <select class="city">
+                <option value="0">Melbourne</option>
+                <option value="1">Sydney</option>
+                <option value="2">Orange</option>
+                <option value="3">Albury</option>
+                <option value="4">Bathurst</option>
+            </select>
+            <select class="category">
+                <option value="0">Select Category</option>
+                <option value="1">Health &amp; Wellbeing</option>
+                <option value="2">Fashion</option>
+                <option value="3">Lifestyle</option>
+                <option value="4">Beauty</option>
+                <option value="5">Trades &amp; Services</option>
+                <option value="6">Automotive</option>
+                <option value="7">Dental</option>
+                <option value="8">Sports &amp; Outdoors</option>
+                <option value="9">Home &amp; Garden</option>
+            </select>
+            <label><input type="checkbox" name="Online" value="value">Online</label>
+            <label><input type="checkbox" name="InStore" value="value">In-store</label>
+        </div>
+    </div>
+    <div class="promotions">
+        <h1>Current promotions</h1>
+        <div class="treeBanners">
+            <div class="col-3">
+                <img src="./images/edge-linen.png">
+            </div>
+            <div class="col-3">
+                <img src="./images/Pet-house-halloween.png">
+            </div>
+            <div class="col-3">
+                <img src="./images/Robins-halloween.png">
             </div>
         </div>
-        <!--hamburger menu-->
-        <nav role="navigation">
-            <div id="hamburgerMenu">
-                <input type="checkbox" />
-                <span></span>
-                <span></span>
-                <span></span>
-                <ul>
-                    <a class="active" href="#"><li>shop now</li></a>
-                    <a href="#"><li>How it works</li></a>
-                    <a href="#"><li>I'm a business</li></a>
-                    <a href="#"><li>Help & contact</li></a>
-                    <br>
-                    <a href="#"><li>Merchant log in</li></a>
-
-                </ul>
-            </div>
-        </nav>
-
+        <div class="clear"></div>
     </div>
+    <div class="clear"></div>
+    <div class="byCategory">
+        <h1>So where can I shop?</h1>
+        <div class="fourBanners">
+            <div class="col-4">
+                <div class="marketToProvide">
+                    <h3>Health & wellbeing</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="marketToProvide">
+                    <h3>Fashion</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="marketToProvide">
+                    <h3>Lifestyle</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="marketToProvide">
+                    <h3>Beauty</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="marketToProvide">
+                    <h3>Trades & services</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="marketToProvide">
+                    <h3>Automotive</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="marketToProvide">
+                    <h3>Home & garden</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="marketToProvide">
+                    <h3>Beauty</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="marketToProvide">
+                    <h3>Trades & services</h3>
+                </div>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="promotions brands">
+        <h1>Featured Brands</h1>
+        <div class="treeBanners">
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ultratune_logo.png">
+            </div>
+            <div class="col-4">
+                <img src="./images/brands/ShopifyPLus.png">
+            </div>
+        </div>
+        <div class="clear"></div>
+    </div>
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
