--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -74,7 +74,7 @@
 				<div class="typeBox">
 					<h1 id='rotating-words' class="txt-rotate" data-period="2000" data-rotate='[ "car services", "glasses","new tyres","dog beds","fresh sheets","physio","bed","cat toys","blender","tents","trampoline","vet bills","new dress","sofa","vacuum","sneakers","toaster","camping gear","activewear", "window tinting","pots and pans","waffle maker" ]'></h1>
 				</div>
-				<div class="btnBox"><a href="Shop.html">Shop all stores</a></div>
+				<div class="btnBox"><a href="shop.html">Shop all stores</a></div>
 			</div>
 		</div>
 		<div class="promotions">
