--- a/newDesign/shop.retailer.html
+++ b/newDesign/shop.retailer.html
@@ -118,6 +118,7 @@
             <h2 id="brand-name"></h2>
             <p class="brand-info"><span id="locations-count">0</span> locations · <span id="availability"></span></p>
             <p class="brand-category">Automotive · Auto - Car Servicing</p>
+            <iframe id="map" frameborder="0" style="border:0" src="" allowfullscreen class="map"></iframe>
             <div class="brand-detailed-info">
                 <p class="brand-info">
                     <span class="key">Address: </span>
@@ -133,10 +134,18 @@
                 </p>
             </div>
 
-            <iframe id="map" width="60%" height="80%" frameborder="0" style="border:0" src="" allowfullscreen
-                    class="map"></iframe>
-
             <div class="brand-action retailers">
+                <a href="" id="direction" target="_blank" rel="noopener">
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"
+                         xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <defs>
+                            <path d="M8.16 0C3.66 0 0 3.66 0 8.16c0 7.645 7.341 11.928 7.654 12.106a1.016 1.016 0 0 0 1.012 0c.313-.178 7.654-4.461 7.654-12.105 0-4.5-3.66-8.16-8.16-8.16m0 18.17c-1.552-1.053-6.12-4.61-6.12-10.01a6.126 6.126 0 0 1 6.12-6.12 6.126 6.126 0 0 1 6.12 6.12c0 5.381-4.571 8.953-6.12 10.01m0-7.97a2.042 2.042 0 0 1-2.04-2.04c0-1.126.915-2.04 2.04-2.04s2.04.914 2.04 2.04c0 1.124-.915 2.04-2.04 2.04m0-6.12c-2.25 0-4.08 1.829-4.08 4.08 0 2.25 1.83 4.08 4.08 4.08s4.08-1.83 4.08-4.08c0-2.251-1.83-4.08-4.08-4.08"
+                                  id="a"/>
+                        </defs>
+                        <use fill="#2864FF" xlink:href="#a" transform="translate(.255 .439)" fill-rule="evenodd"/>
+                    </svg>
+                    Directions
+                </a>
                 <a href="" id="url" target="_blank" rel="noopener noreferrer">
                     <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                         <g stroke-width="1.947" transform="translate(1.474 1.22)" stroke="#2864FF" fill="none"
