--- a/newDesign/shop.brand.html
+++ b/newDesign/shop.brand.html
@@ -117,7 +117,7 @@
         <div class="featured-brand" id="featured-brand">
             <h2 id="brand-name"></h2>
             <p class="brand-info"><span id="locations-count">0</span> locations · <span id="availability"></span></p>
-            <p class="brand-category">Automotive · Auto - Car Servicing</p>
+            <p class="brand-category">Category Name · Sub Category Name</p>
             <div class="brand-action">
                 <a href="" id="url" target="_blank" rel="noopener noreferrer">
                     <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
