--- a/newDesign/how.html
+++ b/newDesign/how.html
@@ -33,7 +33,7 @@
         })(window,document,window['_fs_namespace'],'script','user');
     </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
-    <link rel="stylesheet" href="./css/shop.css" />
+    <link rel="stylesheet" href="./css/how.css" />
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
@@ -67,37 +67,82 @@
     </div>
 </nav>
 <div class="mainContent">
-    <div class="topSearch">
-        <div class="searchBar">
-            <input type="text" name="search" placeholder="What are you searching for?">
-            <input type="submit" value="Search">
+    <div class="heroHowContainer">
+        <div class="greyWithOpacity"></div>
+        <div class="heroInfo">
+            <h1>Empowering you to pay.</h1>
+            <p>We are a buy now, pay later service with a difference. With longer terms across a variety of industries, we allow you to pay over time for the things you need and want.</p>
         </div>
-        <div class="moreFilters">
-            <select class="city">
-                <option value="0">Melbourne</option>
-                <option value="1">Sydney</option>
-                <option value="2">Orange</option>
-                <option value="3">Albury</option>
-                <option value="4">Bathurst</option>
-            </select>
-            <select class="category">
-                <option value="0">Select Category</option>
-                <option value="1">Health &amp; Wellbeing</option>
-                <option value="2">Fashion</option>
-                <option value="3">Lifestyle</option>
-                <option value="4">Beauty</option>
-                <option value="5">Trades &amp; Services</option>
-                <option value="6">Automotive</option>
-                <option value="7">Dental</option>
-                <option value="8">Sports &amp; Outdoors</option>
-                <option value="9">Home &amp; Garden</option>
-            </select>
-            <label><input type="checkbox" name="Online" value="value">Online</label>
-            <label><input type="checkbox" name="InStore" value="value">In-store</label>
+    </div>
+    <div class="intrigued">
+        <h1>So you're intrigued</h1>
+        <p>Start by downloading the app and signing up, you can sign up instore or during online checkout too.</p>
+    </div>
+    <div class="howItWorks">
+        <h1>How Openpay works</h1>
+        <div class="twoPanes">
+            <div class="col-2">
+                <ol class="list-group">
+                    <li class="list-group-item completed">
+                        <div>
+                            <h3>1. Shop</h3>
+                            <p>Get what you want and need today across various industries.</p>
+                        </div>
+                    </li>
+                    <li class="list-group-item completed">
+                        <div>
+                            <h3>2. Choose</h3>
+                            <p>Select Openpay as your payment option to create a plan.</p>
+                        </div>
+                    </li>
+                    <li class="list-group-item completed">
+                        <div>
+                            <h3>3. Customise</h3>
+                            <p>Take control  by setting your payments to suit your schedule.</p>
+                        </div>
+                    </li>
+                    <li class="list-group-item completed">
+                        <div>
+                            <h3>4. Relax</h3>
+                            <p>Sit back and relax, knowing that you've got time to pay. We direct debit the payments so you can focus on life.</p>
+                        </div>
+                    </li>
+                </ol>
+            </div>
+            <div class="col-2">
+                <img src="./images/blue.png">
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="everyStep">
+        <div class="twoPanes">
+            <div class="col-2 everyStepContent">
+            <h1>Every step of the way.</h1>
+            <p>
+                You're in control, but we've got your back.
+                <br><br>
+                Once you've made your purchase you can manage your plan and payments in the app. Keep using Openpay to manage your cashflow in every aspect of your life.
+            </p>
+            </div>
+            <div class="col-2">
+                <table>
+                    <tr>
+                        <td colspan="2"><img src="./images/basket.png"></td>
+                        <td colspan="2"><img src="./images/Plant.png"></td>
+                        <td colspan="2"><img src="./images/Healthcare.png"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3"><img class="pullRight" src="./images/Pets1.png"></td>
+                        <td colspan="3"><img class="pullLeft" src="./images/Tyres.png"></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="clear"></div>
         </div>
     </div>
     <div class="promotions">
-        <h1>Current promotions</h1>
+        <h1>Featured promotions</h1>
         <div class="treeBanners">
             <div class="col-3">
                 <img src="./images/edge-linen.png">
@@ -111,174 +156,50 @@
         </div>
         <div class="clear"></div>
     </div>
-    <div class="clear"></div>
-    <div class="byCategory">
-        <h1>So where can I shop?</h1>
-        <div class="fourBanners">
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Health & wellbeing</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Fashion</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Lifestyle</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Beauty</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Trades & services</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Automotive</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Home & garden</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Beauty</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Trades & services</h3>
-                </div>
-            </div>
-            <div class="clear"></div>
+    <div class="footer">
+        <div class="footerMenu">
+            <a href="help.html" class="footerNav">Help & Contact</a>
+            <a href="merchants.html" class="footerNav">For Merchants</a>
+            <a href="careers.html" class="footerNav">Careers</a>
+            <a href="blog.html" class="footerNav">Blog</a>
         </div>
-    </div>
-    <div class="promotions brands">
-        <h1>Featured Brands</h1>
-        <div class="treeBanners">
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
+        <div class="socialLinks">
+				<span>
+					<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
+						Facebook
+					</a>
+					<a href="https://twitter.com/openpay_" class="footer-icon twit">
+						Twitter
+					</a>
+				</span>
+            <span>
+					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+						LinkedIn
+					</a>
+					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+						Instagram
+					</a>
+				</span>
         </div>
-        <div class="clear"></div>
+        <div class="footerAppWrapper">
+            <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
+                <img class="apple" src="./images/apple.svg">
+            </a>
+            <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay">
+                <img class="android" src="./images/android.svg">
+            </a>
+        </div>
+        <div class="footerMoreLinksMenu">
+            <a href="privacy.html" class="footerNav">Privacy</a>
+            <a href="terms.html" class="footerNav">Terms & Conditions</a>
+            <a href="userLicence.html" class="footerNav">User Licence</a>
+            <a href="PCI.html" class="footerNav">PCI Data Security</a>
+        </div>
+        <p>© Openpay &nbsp; | &nbsp; Made with <3 in Melbourne, Australia</p>
+        <a class="whiteLogo" href="/">
+            <img src="./images/openpay_logo_white.svg">
+        </a>
+
     </div>
 </div>
 
