--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -33,7 +33,7 @@
         })(window,document,window['_fs_namespace'],'script','user');
     </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
-    <link rel="stylesheet" href="./css/shop.css" />
+    <link rel="stylesheet" href="./css/business.css" />
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
@@ -67,218 +67,117 @@
     </div>
 </nav>
 <div class="mainContent">
-    <div class="topSearch">
-        <div class="searchBar">
-            <input type="text" name="search" placeholder="What are you searching for?">
-            <input type="submit" value="Search">
-        </div>
-        <div class="moreFilters">
-            <select class="city">
-                <option value="0">Melbourne</option>
-                <option value="1">Sydney</option>
-                <option value="2">Orange</option>
-                <option value="3">Albury</option>
-                <option value="4">Bathurst</option>
-            </select>
-            <select class="category">
-                <option value="0">Select Category</option>
-                <option value="1">Health &amp; Wellbeing</option>
-                <option value="2">Fashion</option>
-                <option value="3">Lifestyle</option>
-                <option value="4">Beauty</option>
-                <option value="5">Trades &amp; Services</option>
-                <option value="6">Automotive</option>
-                <option value="7">Dental</option>
-                <option value="8">Sports &amp; Outdoors</option>
-                <option value="9">Home &amp; Garden</option>
-            </select>
-            <label><input type="checkbox" name="Online" value="value">Online</label>
-            <label><input type="checkbox" name="InStore" value="value">In-store</label>
+    <div class="heroBusinessContainer">
+        <div class="greyWithOpacity"></div>
+        <div class="heroInfo">
+            <h1>Enable new audiences</h1>
+            <p>
+                Give your existing and future customers change to the way they pay.
+            </p>
+            <div class="btnBox"><a href="#">Register your interest</a></div>
         </div>
     </div>
-    <div class="promotions">
-        <h1>Current promotions</h1>
-        <div class="treeBanners">
-            <div class="col-3">
-                <img src="./images/edge-linen.png">
-            </div>
-            <div class="col-3">
-                <img src="./images/Pet-house-halloween.png">
-            </div>
-            <div class="col-3">
-                <img src="./images/Robins-halloween.png">
-            </div>
-        </div>
-        <div class="clear"></div>
-    </div>
-    <div class="clear"></div>
-    <div class="byCategory">
-        <h1>So where can I shop?</h1>
-        <div class="fourBanners">
+    <div class="whyUseOpenpay">
+        <h1>Why use Openpay</h1>
+        <div class="fourPanes">
             <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Health & wellbeing</h3>
-                </div>
+                <div class="whyUseOpenpayIcon chart"></div>
+                <h2>
+                    Increase ATV & conversion
+                </h2>
+                <p>
+                    Consumers are more comfortable spending more when they have more time to pay and no scary interest.
+                </p>
             </div>
             <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Fashion</h3>
-                </div>
+                <div class="whyUseOpenpayIcon customers"></div>
+                <h2>
+                    Increase ATV & conversion
+                </h2>
+                <p>
+                    Consumers are more comfortable spending more when they have more time to pay and no scary interest.
+                </p>
             </div>
             <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Lifestyle</h3>
-                </div>
+                <div class="whyUseOpenpayIcon risk"></div>
+                <h2>
+                    Increase ATV & conversion
+                </h2>
+                <p>
+                    Consumers are more comfortable spending more when they have more time to pay and no scary interest.
+                </p>
             </div>
             <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Beauty</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Trades & services</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Automotive</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Home & garden</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Beauty</h3>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="marketToProvide">
-                    <h3>Trades & services</h3>
-                </div>
+                <div class="whyUseOpenpayIcon lock"></div>
+                <h2>
+                    Increase ATV & conversion
+                </h2>
+                <p>
+                    Consumers are more comfortable spending more when they have more time to pay and no scary interest.
+                </p>
             </div>
             <div class="clear"></div>
         </div>
     </div>
-    <div class="promotions brands">
-        <h1>Featured Brands</h1>
-        <div class="treeBanners">
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
+
+    <div class="longerTerms">
+        <div class="twoPanes">
+            <div class="col-2 everyStepContent">
+                <h1>Longer terms. Higher ATV</h1>
+                <p>
+                    Bigger purchases just got a little less daunting. More time to pay means more manageable spending for your customers.
+                </p>
             </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
+            <div class="col-2">
+                <img src="./images/graph.svg">
             </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ultratune_logo.png">
-            </div>
-            <div class="col-4">
-                <img src="./images/brands/ShopifyPLus.png">
-            </div>
+            <div class="clear"></div>
         </div>
-        <div class="clear"></div>
+    </div>
+    <div class="footer">
+        <div class="footerMenu">
+            <a href="help.html" class="footerNav">Help & Contact</a>
+            <a href="merchants.html" class="footerNav">For Merchants</a>
+            <a href="careers.html" class="footerNav">Careers</a>
+            <a href="blog.html" class="footerNav">Blog</a>
+        </div>
+        <div class="socialLinks">
+				<span>
+					<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
+						Facebook
+					</a>
+					<a href="https://twitter.com/openpay_" class="footer-icon twit">
+						Twitter
+					</a>
+				</span>
+            <span>
+					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+						LinkedIn
+					</a>
+					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+						Instagram
+					</a>
+				</span>
+        </div>
+        <div class="footerAppWrapper">
+            <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
+                <img class="apple" src="./images/apple.svg">
+            </a>
+            <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay">
+                <img class="android" src="./images/android.svg">
+            </a>
+        </div>
+        <div class="footerMoreLinksMenu">
+            <a href="privacy.html" class="footerNav">Privacy</a>
+            <a href="terms.html" class="footerNav">Terms & Conditions</a>
+            <a href="userLicence.html" class="footerNav">User Licence</a>
+            <a href="PCI.html" class="footerNav">PCI Data Security</a>
+        </div>
+        <p>© Openpay &nbsp; | &nbsp; Made with <3 in Melbourne, Australia</p>
+        <a class="whiteLogo" href="/">
+            <img src="./images/openpay_logo_white.svg">
+        </a>
+
     </div>
 </div>
 
