--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="./assets/images/icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Openpay - Shop</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -69,17 +69,20 @@
 <div class="mainContent">
     <div class="heroBusinessContainer">
         <div class="greyWithOpacity"></div>
-        <div class="heroInfo">
-            <h1>Enable new audiences</h1>
-            <p>
-                Give your existing and future customers change to the way they pay.
-            </p>
-            <div class="btnBox"><a href="#">Register your interest</a></div>
+        <div class="bodyContainer">
+            <div class="heroInfo">
+                <h1>Enable new audiences</h1>
+                <p>
+                    Give your existing and future customers change to the way they pay.
+                </p>
+                <div class="btnBox"><a href="#">Register your interest</a></div>
+            </div>
         </div>
     </div>
-    <div class="whyUseOpenpay">
+    <div class="whyUseOpenpay greyPane">
         <h1>Why use Openpay</h1>
-        <div class="fourPanes">
+        <div class="bodyContainer">
+            <div class="fourPanes">
             <div class="col-4">
                 <div class="whyUseOpenpayIcon chart"></div>
                 <h2>
@@ -118,10 +121,11 @@
             </div>
             <div class="clear"></div>
         </div>
+        </div>
     </div>
-
     <div class="longerTerms">
-        <div class="twoPanes">
+        <div class="bodyContainer">
+            <div class="twoPanes">
             <div class="col-2 everyStepContent">
                 <h1>Longer terms. Higher ATV</h1>
                 <p>
@@ -130,6 +134,81 @@
             </div>
             <div class="col-2">
                 <img src="./images/graph.svg">
+            </div>
+            <div class="clear"></div>
+        </div>
+        </div>
+    </div>
+    <div class="whyUseCircles greyPane">
+        <h1>Why use Openpay</h1>
+        <div class="bodyContainer">
+            <div class="fourPanes">
+            <div class="col-3">
+                <div class="circle">
+                    +120% ATV Increase
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="circle">
+                    77% Repeat Cusomers
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="tellMeMoreBtn">
+                    Tell me more
+                </div>
+            </div>
+            <div class="clear"></div>
+        </div>
+        </div>
+    </div>
+    <div class="trustedLeaders">
+        <div class="bodyContainer">
+            <div class="col-2">
+                <h1>Trusted by industry leaders</h1>
+                <p>We partner with some of the biggest brands in the country across a range of industries including home improvement, healthcare, retail, automotive and more.</p>
+            </div>
+            <div class="col-2">
+                <img src="images/leaders/leaders-TakingShape_AU_Logo.png" height="33" width="144"/>
+                <img src="images/leaders/leaders-NikeTP.png" height="44" width="119"/>
+                <img src="images/leaders/leaders-MySmilePlan.png" height="46" width="97"/>
+                <img src="images/leaders/leaders-house-logo-hd.png" height="33" width="127"/>
+                <img src="images/leaders/leaders-Edge-01.png" height="49" width="84"/>
+                <img src="images/leaders/leaders-AHG.png" height="73" width="131"/></div>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="everywereYourCostumers greyPane">
+        <div class="bodyContainer">
+            <div class="col-2">
+                <h1>Everywhere your customers are.</h1>
+                <p>Increase your ATV instore with the Openpay app and online with the Openpay hosted checkout. Market to them through our marketing. EDM's and app notifications</p>
+            </div>
+            <div class="col-2">
+                <img src="images/everywhere_image.svg"/>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="seamless">
+        <div class="bodyContainer">
+            <h1>Seamless integration with your store.</h1>
+            <p>Customers don't care what eCommerce software you use, but we do. we integrate with the industry's best platforms so you can enable a wider audience.</p>
+            <div class="icons">
+                <img src="images/eComm/CommerceVision.png"/>
+                <img src="images/eComm/DemandWare.png"/>
+                <img src="images/eComm/EPages.png"/>
+                <img src="images/eComm/Estar.png"/>
+
+                <img src="images/eComm/Magento.png"/>
+                <img src="images/eComm/Magento2.png"/>
+                <img src="images/eComm/Opencart.png"/>
+                <img src="images/eComm/Pronto.png"/>
+
+                <img src="images/eComm/Seams.png"/>
+                <img src="images/eComm/shopify.png"/>
+                <img src="images/eComm/ShopifyPLus.png"/>
+                <img src="images/eComm/WooCommerce.png"/>
             </div>
             <div class="clear"></div>
         </div>
