--- a/newDesign/shop.brand.html
+++ b/newDesign/shop.brand.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="./assets/images/icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Openpay - Shop</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
