--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -213,6 +213,13 @@
             <div class="clear"></div>
         </div>
     </div>
+    <div class="readyRegister greyPane">
+        <div class="bodyContainer">
+            <h1>Ready to increase sales with Openpay?</h1>
+            <p>Start selling more with no risk. Enquire now, we'll get back to you within 24 hours.</p>
+            <div class="btnBox"><a href="#">Register your interest</a></div>
+        </div>
+    </div>
     <div class="footer">
         <div class="footerMenu">
             <a href="help.html" class="footerNav">Help & Contact</a>
