--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -220,7 +220,7 @@
 		<div class="footer">
 			<div class="footerMenu">
 				<a href="help.html" class="footerNav">Help & Contact</a>
-				<a href="merchants.html" class="footerNav">For Merchants</a>
+				<a href="business.html" class="footerNav">For Merchants</a>
 				<a href="careers.html" class="footerNav">Careers</a>
 				<a href="blog.html" class="footerNav">Blog</a>
 			</div>
