--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -45,7 +45,7 @@
 			<a href="business.html">I'm a business</a>
 			<a href="help.html">Help & contact</a>
 			<div class="topNavRight">
-				<a href="#">Merchant log in</a>
+				<a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
 			</div>
 		</div>
 		<!--hamburger menu-->
@@ -62,7 +62,7 @@
 					<a href="business.html"><li>I'm a business</li></a>
 					<a href="help.html"><li>Help & contact</li></a>
 					<br>
-					<a href="#"><li>Merchant log in</li></a>
+					<a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
 
 				</ul>
 			</div>
@@ -212,7 +212,7 @@
 			</div>
 		</div>
 		<div class="instagram">
-			<h1>Join us on Instegram</h1>
+			<h1>Join us on Instagram</h1>
 			<div class="instagramWrapper">
 				<div id="instagram"></div>
 			</div>
