--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -44,7 +44,7 @@
     <a class="active" href="business.html">I'm a business</a>
     <a href="help.html">Help & contact</a>
     <div class="topNavRight">
-        <a href="#">Merchant log in</a>
+        <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
 </div>
 <!--hamburger menu-->
@@ -61,7 +61,7 @@
             <a class="active" href="business.html"><li>I'm a business</li></a>
             <a href="help.html"><li>Help & contact</li></a>
             <br>
-            <a href="#"><li>Merchant log in</li></a>
+            <a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
 
         </ul>
     </div>
@@ -75,7 +75,7 @@
                 <p>
                     Give your existing and future customers change to the way they pay.
                 </p>
-                <div class="btnBox"><a href="#">Register your interest</a></div>
+                <div class="btnBox"><a href="register.html">Register your interest</a></div>
             </div>
         </div>
     </div>
@@ -217,7 +217,7 @@
         <div class="bodyContainer">
             <h1>Ready to increase sales with Openpay?</h1>
             <p>Start selling more with no risk. Enquire now, we'll get back to you within 24 hours.</p>
-            <div class="btnBox"><a href="#">Register your interest</a></div>
+            <div class="btnBox"><a href="register.html">Register your interest</a></div>
         </div>
     </div>
     <div class="footer">
