--- a/newDesign/help.html
+++ b/newDesign/help.html
@@ -44,7 +44,7 @@
     <a href="business.html">I'm a business</a>
     <a class="active" href="help.html">Help & contact</a>
     <div class="topNavRight">
-        <a href="#">Merchant log in</a>
+        <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
 </div>
 <!--hamburger menu-->
@@ -61,7 +61,7 @@
             <a href="business.html"><li>I'm a business</li></a>
             <a class="active" href="help.html"><li>Help & contact</li></a>
             <br>
-            <a href="#"><li>Merchant log in</li></a>
+            <a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
 
         </ul>
     </div>
