--- a/newDesign/register.html
+++ b/newDesign/register.html
@@ -33,16 +33,16 @@
         })(window,document,window['_fs_namespace'],'script','user');
     </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
-    <link rel="stylesheet" href="./css/how.css" />
+    <link rel="stylesheet" href="./css/help.css" />
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
 <div class="topNav">
     <a class="mainLogo" href="index.html"></a>
     <a href="shop.html">Shop now</a>
-    <a class="active" href="how.html">How it works</a>
+    <a href="how.html">How it works</a>
     <a href="business.html">I'm a business</a>
-    <a href="help.html">Help & contact</a>
+    <a class="active" href="help.html">Help & contact</a>
     <div class="topNavRight">
         <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
@@ -57,9 +57,9 @@
         <span></span>
         <ul>
             <a href="shop.html"><li>Shop now</li></a>
-            <a class="active" href="how.html"><li>How it works</li></a>
+            <a href="how.html"><li>How it works</li></a>
             <a href="business.html"><li>I'm a business</li></a>
-            <a href="help.html"><li>Help & contact</li></a>
+            <a class="active" href="help.html"><li>Help & contact</li></a>
             <br>
             <a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
 
@@ -67,95 +67,23 @@
     </div>
 </nav>
 <div class="mainContent">
-    <div class="heroHowContainer">
+    <div class="heroHelpContainer">
         <div class="greyWithOpacity"></div>
-        <div class="heroInfo">
-            <h1>Empowering you to pay.</h1>
-            <p>We are a buy now, pay later service with a difference. With longer terms across a variety of industries, we allow you to pay over time for the things you need and want.</p>
-        </div>
-    </div>
-    <div class="intrigued">
-        <h1>So you're intrigued</h1>
-        <p>Start by downloading the app and signing up, you can sign up instore or during online checkout too.</p>
-    </div>
-    <div class="howItWorks">
-        <h1>How Openpay works</h1>
-        <div class="twoPanes">
-            <div class="col-2">
-                <ol class="list-group">
-                    <li class="list-group-item completed">
-                        <div>
-                            <h3>1. Shop</h3>
-                            <p>Get what you want and need today across various industries.</p>
-                        </div>
-                    </li>
-                    <li class="list-group-item completed">
-                        <div>
-                            <h3>2. Choose</h3>
-                            <p>Select Openpay as your payment option to create a plan.</p>
-                        </div>
-                    </li>
-                    <li class="list-group-item completed">
-                        <div>
-                            <h3>3. Customise</h3>
-                            <p>Take control  by setting your payments to suit your schedule.</p>
-                        </div>
-                    </li>
-                    <li class="list-group-item completed">
-                        <div>
-                            <h3>4. Relax</h3>
-                            <p>Sit back and relax, knowing that you've got time to pay. We direct debit the payments so you can focus on life.</p>
-                        </div>
-                    </li>
-                </ol>
-            </div>
-            <div class="col-2">
-                <img src="./images/blue.png">
-            </div>
-            <div class="clear"></div>
-        </div>
-    </div>
-    <div class="everyStep">
-        <div class="twoPanes">
-            <div class="col-2 everyStepContent">
-            <h1>Every step of the way.</h1>
-            <p>
-                You're in control, but we've got your back.
-                <br><br>
-                Once you've made your purchase you can manage your plan and payments in the app. Keep using Openpay to manage your cashflow in every aspect of your life.
-            </p>
-            </div>
-            <div class="col-2">
-                <table>
-                    <tr>
-                        <td colspan="2"><img src="./images/basket.png"></td>
-                        <td colspan="2"><img src="./images/Plant.png"></td>
-                        <td colspan="2"><img src="./images/Healthcare.png"></td>
-                    </tr>
-                    <tr>
-                        <td colspan="3"><img class="pullRight" src="./images/Pets1.png"></td>
-                        <td colspan="3"><img class="pullLeft" src="./images/Tyres.png"></td>
-                    </tr>
-                </table>
-            </div>
-            <div class="clear"></div>
-        </div>
-    </div>
-    <div class="promotions">
-        <h1>Featured promotions</h1>
-        <div class="treeBanners">
-            <div class="col-3">
-                <img src="./images/edge-linen.png">
-            </div>
-            <div class="col-3">
-                <img src="./images/Pet-house-halloween.png">
-            </div>
-            <div class="col-3">
-                <img src="./images/Robins-halloween.png">
+        <div class="bodyContainer">
+            <div class="heroInfo">
+                <h1>Register</h1>
             </div>
         </div>
-        <div class="clear"></div>
     </div>
+
+    <div class="helpContent greyPane">
+        <div class="bodyContainer">
+            <h1>Join the movement</h1>
+            <p>Join the growing list of locations that are empowering previously<br>untapped audiences to live their lifestyle</p>
+        </div>
+    </div>
+
+
     <div class="footer">
         <div class="footerMenu">
             <a href="help.html" class="footerNav">Help & Contact</a>
@@ -204,5 +132,23 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            document.getElementById("myBtn").style.display = "block";
+        } else {
+            document.getElementById("myBtn").style.display = "none";
+        }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+</script>
 </body>
 </html>
