--- a/newDesign/shop.html
+++ b/newDesign/shop.html
@@ -80,7 +80,7 @@
     <a href="business.html">I'm a business</a>
     <a href="help.html">Help & contact</a>
     <div class="topNavRight">
-        <a href="#">Merchant log in</a>
+        <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
 </div>
 <!--hamburger menu-->
@@ -113,7 +113,7 @@
     </div>
 </nav>
 <div class="mainContent">
-    <div class="topSearch">
+    <div class="topSearch greyPane">
         <div class="bodyContainer">
             <div class="searchBar">
                 <input type="text" name="search" placeholder="What are you searching for?" id="query">
@@ -139,12 +139,13 @@
                     <option value="209009">Sports &amp; Outdoors</option>
                     <option value="209005">Home &amp; Garden</option>
                 </select>
-                <label><input type="checkbox" name="Online" value="value" id="online">Online</label>
-                <label><input type="checkbox" name="InStore" value="value" id="in-store">In-store</label>
+                <label class="onlineLabel"><input type="checkbox" name="Online" value="value" id="online">Online</label>
+                <label class="inStoreLabel"><input type="checkbox" name="InStore" value="value" id="in-store">In-store</label>
             </div>
+            <div class="clear"></div>
         </div>
     </div>
-    <div class="promotions" id="promotions">
+    <div class="promotions greyPane" id="promotions">
         <div class="bodyContainer">
             <h1>Current promotions</h1>
             <div class="treeBanners">
@@ -162,7 +163,7 @@
         </div>
     </div>
     <div class="clear"></div>
-    <div class="byCategory" id="categories-grid">
+    <div class="byCategory greyPane" id="categories-grid">
         <div class="bodyContainer">
             <h1>So where can I shop?</h1>
             <div class="fourBanners">
@@ -215,7 +216,7 @@
             </div>
         </div>
     </div>
-    <div class="promotions brands" id="featured">
+    <div class="promotions brands greyPane" id="featured">
         <div class="bodyContainer">
             <h1>Featured Brands</h1>
             <div class="treeBanners">
@@ -334,7 +335,7 @@
             <div class="clear"></div>
         </div>
     </div>
-    <div class="brands-search-results" id="search-results">
+    <div class="brands-search-results greyPane" id="search-results">
         <div class="bodyContainer">
             <h1 id="search-results-heading"></h1>
             <div class="results-count"><span id="search-results-count">120</span> results</div>
