--- a/newDesign/shop.retailer.html
+++ b/newDesign/shop.retailer.html
@@ -80,7 +80,7 @@
     <a href="business.html">I'm a business</a>
     <a href="help.html">Help & contact</a>
     <div class="topNavRight">
-        <a href="#">Merchant log in</a>
+        <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
 </div>
 <!--hamburger menu-->
