--- a/newDesign/help.html
+++ b/newDesign/help.html
@@ -73,8 +73,8 @@
             <div class="heroInfo">
                 <h1>We're here for you.</h1>
                 <p>if you need some help, we're right here.</p>
-                <div class="btnBox"><a href="#">1300 168 359</a></div>
-                <div class="btnBox"><a href="#">info@openpay.com.au</a></div>
+                <div class="btnBox"><a href="tel:1300168359">1300 168 359</a></div>
+                <div class="btnBox"><a href="mailto:info@openpay.com.au">info@openpay.com.au</a></div>
             </div>
         </div>
     </div>
