--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -127,7 +127,7 @@
 			</div>
 			<div class="clear"></div>
 			<div class="learnMoreWrapper">
-				<a class="button" href="#">Learn more</a>
+				<a class="button" href="how.html">Learn more</a>
 			</div>
 		</div>
 		<div class="whereCanShop">
